@@ -1,5 +1,16 @@
 2008-03-30  Dan Williams  <dcbw@redhat.com>
 
+	* src/applet.c
+		- (nma_menu_create): connect to the menu's deactivate signal
+		- (nma_menu_deactivate_cb): free menu items (and thus devices) when
+			the menu disappears to ensure that everything gets unreffed
+			properly.  Previously, since the menu items would only get unreffed
+			when the menu dropped down again, devices wouldn't get disposed of
+			when NetworkManager went away, and when NM would start back up again,
+			the applet would have a stale AP and device list.
+
+2008-03-30  Dan Williams  <dcbw@redhat.com>
+
 	* src/connection-editor/page-wireless-security.c
 		- (get_default_type_for_security): unencrypted connections shouldn't
 			have a wireless-security setting
